Fixed font of 'need login' message on small screens.

--- a/allmychanges/static/allmychanges/css/allmychanges.css
+++ b/allmychanges/static/allmychanges/css/allmychanges.css
@@ -1150,6 +1150,12 @@ a:hover {
   line-height: 40px;
   margin-bottom: 30px;
 }
+@media (max-width: 600px) {
+  .modal-popup__please-login > p {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
 .notifications {
   position: fixed;
   top: 0;
