--- a/allmychanges/static/allmychanges/stylus/components/modal-popup.styl
+++ b/allmychanges/static/allmychanges/stylus/components/modal-popup.styl
@@ -38,6 +38,10 @@
             font-size: 30px;
             line-height: 40px;
             margin-bottom: 30px;
+            @media (max-width: 600px) {
+                font-size: 20px;
+                line-height: 30px;
+            }
         }
     }
 }
